# skinny

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Architecture.md  CHANGELOG.md  CLAUDE.md  KnownBugs.md  LICENSE  README.md  SkinRendering.md  pyproject.toml
.claude/: settings.local.json
assets/: cornell_box_emissive.usda  cornell_box_python_material.usda  cornell_box_rectlight.usda  cornell_box_sphere.usda  glass_caustics_test.usda  light_infinite_f620_const.hdr  restir_variance_demo.usda  skinny_controls_demo.usda  thick_lens_f22.usda  thick_lens_f2p8.usda  thick_lens_f8.usda  thick_lens_focus_red.usda  thick_lens_test.usda  three_materials_demo.usda
assets/Usd-Mtlx-Example/materials/: standard_surface_default_uv_image.mtlx
assets/prism_dispersion/: README.md  prism_dispersion.pbrt  prism_dispersion.usda
docs/: Architecture.md  Megakernel.md  MetropolisLightTransport.md  NeuralGuiding.md  PbrtImport.md  PhotonMapping.md  PythonAPI.md  ReSTIR.md  SkinRendering.md  Spectral.md  SplineFlows.md  Subsurface.md  Wavefront.md
docs/diagrams/: embed_code.cjs  eqsvg.cjs
docs/diagrams/guiding_variance/: README.md  RESULTS_cornell.md  config.json  manifest_cornell.json
docs/diagrams/neural/: equations.json  gen_svg_equations.cjs
docs/diagrams/neural_study/: RESULTS.md  size_precision.csv
docs/diagrams/restir/: equations.json  gen_svg_equations.cjs  render.cjs
docs/diagrams/skin/: equations.json  gen_svg_equations.cjs
docs/diagrams/spectral/: equations.json
docs/diagrams/spline_flow/: equations.json  gen_svg_equations.cjs
docs/diagrams/sppm/: equations.json  gen_svg_equations.cjs
docs/superpowers/plans/: 2026-05-24-cutout-opacity-fix.md  2026-05-26-clever-camera-placement.md  2026-05-26-headless-render-entry-point.md  2026-05-27-camera-distance-any-value.md  2026-05-27-openspec-adoption.md
docs/superpowers/specs/: 2026-05-24-cutout-opacity-fix-design.md  2026-05-26-clever-camera-placement-design.md  2026-05-26-headless-render-entry-point-design.md  2026-05-27-camera-distance-any-value-design.md  (+4 more)
examples/: README.md  dispersion_demo.py  render_image.py  render_turntable.py
lenses/: dgauss50.usda
openspec/: config.yaml
python_materials/: example_freckles.py  preview_surface_material.py
scripts/: bench_metal_equal_time.py  cornell_online_train.py  diag2_metal_wavefront_bisect.py  diag_metal_flat.py  diag_metal_wavefront_ab.py  guarded_metal.sh  guiding_variance_sweep.py  nis_bounds_ablation.py  nis_chart_parity.py  nis_dump_glass_records.py  nis_eval_net_density.py  nis_glass_chart_sweep.py  nis_glass_encoding_sweep.py  nis_glass_rqvspq.py  nis_glass_rqvspq_multiseed.py  nis_pq_parity.py  nis_render_bdpt_ref.py  nis_render_to_png.py  nis_sweep_cornell.json  nis_sweep_cornell_metal.json  nis_sweep_glass.json  nis_sweep_glass_metal.json  nis_train_curve.py  nis_train_offline.py  probe_metal_bdpt_compile.py  probe_metal_megakernel_compile.py  probe_metal_neural_compile.py  probe_metal_neural_layout.py  probe_metal_restir_compile.py  probe_metal_wavefront_compile.py  render_compare.py  smoke_metal_wavefront_render.py
src/skinny/: __init__.py  app.py  backend_select.py  bxdf_math.py  bxdf_visualizer.py  cli_common.py  config_report.py  control_panel.py  debug_raster_ref.py  debug_viewport.py  environment.py  fetch_hdrs.py  gizmo.py  glb_import.py  hardware.py  head_textures.py  headless.py  lens_optics.py  material_graph_editor.py  material_reloader.py  materialx_runtime.py  mcp_auth.py  mcp_paths.py  mcp_server.py  megakernel_sources.py  mesh.py  mesh_cache.py  metal_compute.py  metal_context.py  metal_wavefront.py  mlt_bootstrap.py  mlt_capability.py  mtlx_graph_view.py  mtlx_synthesis.py  params.py  playback.py  presets.py  render_session.py  renderer.py  scene.py  (+19 more)
tests/: bench_neural_online.py  conftest.py  guiding_variance_metrics.py  helpers.py  metal_cleanup_child.py  study_size_precision.py  test_backend_select.py  test_camera_placement.py  test_camera_up_axis.py  test_cli_common.py  test_cloud_noise.py  test_debug_raster_ref.py  test_default_light_policy.py  test_dome_texture_authority.py  test_environment.py  test_execution_mode.py  test_execution_mode_compile.py  test_flat_coat_fresnel.py  test_flat_rich_inputs.py  test_flat_rich_inputs_render.py  test_gizmo_input.py  test_gizmo_mode_parity.py  test_glass_caustics_test.py  test_glb_asset_import.py  test_glb_asset_import_gpu.py  test_glfw_command_drain.py  test_guiding_variance_emit.py  test_guiding_variance_metrics.py  test_headless.py  test_headless_animation.py  test_headless_api.py  test_headless_controls.py  test_headless_gizmo.py  test_headless_skel.py  test_integration.py  test_intersections.py  test_last_dirs.py  test_lights.py  test_lobe_samplers.py  test_material_authoring_gpu.py  (+132 more)
tests/data/: cornell_neural.nfw1
tests/harnesses/: test_common_harness.slang  test_environment_harness.slang  test_flat_lobes_harness.slang  test_light_harness.slang  test_neural_flow_harness.slang  test_restir_harness.slang  test_sampler_harness.slang  test_skin_harness.slang  test_spectrum_harness.slang  test_sppm_state_harness.slang  test_volume_harness.slang
tests/kernels/: energy_ref.py  sampling_ref.py  test_spectrum_kernels.py
tests/pbrt/: regen_refs.py  test_bdpt_energy.py  test_camera.py  test_cli.py  test_cloud_import.py  test_convergence.py  test_disk.py  test_dispersion.py  test_emissive_nee.py  test_emit_integration.py  test_env_equiarea_wiring.py  test_envmap.py  test_equiarea.py  test_film_clamp.py  test_light_naming.py  test_loopsubdiv.py  test_materials.py  test_materials_mtlx.py  test_matrix.py  test_media.py  test_metadata.py  test_metrics.py  test_mirrored_camera.py  test_mtlx_emit.py  test_mtlx_roundtrip.py  test_named_spectra.py  test_nanovdb.py  test_nanovdb_import.py  test_parity.py  test_parser.py  test_ply_gzip.py  test_radiometric_parity.py  test_spectra.py  test_spectral_data.py  test_spectral_mirror.py  test_spectral_payload.py  test_state.py  test_subsurface_coeffs.py  test_subsurface_routing.py  test_subsurface_unit_scale.py  (+4 more)
tools/: sppm_glossy_ab.py
(+962 files in other folders)
