[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skinny"
version = "0.1.0"
description = "Real-time physically-based human skin rendering using ray tracing and volume rendering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "a_bil" },
]
dependencies = [
    "numpy>=1.26",
    "slangpy>=0.20",
    "vulkan>=1.3",
    "glfw>=2.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
skinny = "skinny.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skinny = ["shaders/*.slang"]

[tool.ruff]
line-length = 100
