[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skinny"
version = "0.1.0"
description = "Real-time physically-based human skin rendering using ray tracing and volume rendering"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "a_bil" },
]
dependencies = [
    "numpy>=1.26",
    "slangpy>=0.20",
    "vulkan>=1.3",
    "glfw>=2.7",
    "Pillow>=10.0",
    # imageio + freeimage plugin for HDR / EXR screenshot output. Pillow
    # alone can't write Radiance .hdr or OpenEXR; the [freeimage] extra
    # pulls in the FreeImage backend that handles both.
    "imageio[freeimage]>=2.34",
    # MaterialX is required for skin material descriptions and (in Phase C)
    # GPU shader generation. The PyPI 1.39.4 wheel ships GenGlsl/Mdl/Msl/Osl
    # but not GenSlang yet — for full feature coverage build MaterialX from
    # source with MATERIALX_BUILD_PYTHON=ON. Both the wheel and a from-source
    # build satisfy this constraint.
    "MaterialX>=1.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# usd-core lands in Phase D and is opt-in until then; declaring it as an
# extra keeps `pip install -e .` cheap for users who only want the renderer.
usd = [
    "usd-core>=24.0",
]
web = [
    "panel>=1.4",
    "bokeh>=3.4",
    "av>=12.0",
]

[project.scripts]
skinny = "skinny.app:main"
skinny-web = "skinny.web_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skinny = [
    "shaders/*.slang",
    "shaders/estimators/*.slang",
    "shaders/samplers/*.slang",
    "shaders/lights/*.slang",
    "shaders/integrators/*.slang",
    "mtlx/*.mtlx",
    "mtlx/genslang/*.mtlx",
    "mtlx/genslang/*.slang",
    "web_templates/*.html",
    "web_templates/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires Vulkan GPU + slangpy",
    "slow: Monte Carlo / many-sample statistical tests",
    "slangpile: exercises slangpile transpiler",
]

[tool.ruff]
line-length = 100
