[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skinny"
version = "0.1.2"
description = "Real-time physically-based human skin rendering using ray tracing and volume rendering"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "a_bil" },
]
dependencies = [
    "numpy>=2.4.5",
    "slangpy>=0.41.0",
    "vulkan>=1.3",
    "glfw>=2.7",
    "Pillow>=10.0",
    # imageio for reading HDR environment maps (.hdr/.exr). The freeimage
    # plugin is read-only, so EXR writes go through the official OpenEXR
    # bindings; Radiance .hdr writes are done inline (RGBE, numpy-only).
    "imageio>=2.34",
    "OpenEXR>=3.3",
    # MaterialX (incl. GenSlang) and OpenUSD+usdMtlx come from our own builds
    # published as GitHub Release wheels (MaterialX 1.39.6 / OpenUSD v26.05), not
    # PyPI's `MaterialX` / `usd-core`. materialx-python-standalone provides
    # `import MaterialX`; openusd-materialx provides `pxr` with the usdMtlx plugin.
    # Direct-URL wheels are platform+python specific, so one marked entry per
    # (python, platform) the release ships (cp312/313/314 x macos-arm64/linux/win).
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp312-cp312-macosx_26_0_arm64.whl ; python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp313-cp313-macosx_26_0_arm64.whl ; python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp314-cp314-macosx_26_0_arm64.whl ; python_version == '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp312-cp312-linux_x86_64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp313-cp313-linux_x86_64.whl ; python_version == '3.13' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp314-cp314-linux_x86_64.whl ; python_version == '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp312-cp312-win_amd64.whl ; python_version == '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp313-cp313-win_amd64.whl ; python_version == '3.13' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "materialx-python-standalone @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/materialx_python_standalone-1.0.11-cp314-cp314-win_amd64.whl ; python_version == '3.14' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "PySide6>=6.11.1",
    "zstandard>=0.25.0",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp312-cp312-macosx_26_0_arm64.whl ; python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp313-cp313-macosx_26_0_arm64.whl ; python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp314-cp314-macosx_26_0_arm64.whl ; python_version == '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp312-cp312-linux_x86_64.whl ; python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp313-cp313-linux_x86_64.whl ; python_version == '3.13' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp314-cp314-linux_x86_64.whl ; python_version == '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp312-cp312-win_amd64.whl ; python_version == '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp313-cp313-win_amd64.whl ; python_version == '3.13' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "openusd-materialx @ https://github.com/bilgili/openusd-materialx/releases/download/v1.0.11/openusd_materialx-1.0.11-cp314-cp314-win_amd64.whl ; python_version == '3.14' and sys_platform == 'win32' and platform_machine == 'AMD64'",
    "panel>=1.9.3",
    "holoviews>=1.22.1",
    "OpenEXR>=3.4.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# OpenUSD now ships as a base dependency (openusd-materialx, from the GitHub
# Release above) rather than PyPI usd-core, so this extra is a no-op kept only so
# existing `pip install .[usd]` invocations still resolve.
usd = []
web = [
    "panel>=1.4",
    "bokeh>=3.4",
    "av>=12.0",
]
# CUDA↔Vulkan weight-handoff interop (--neural-handoff interop, change
# neural-online-training): cuda-python drives cudaImportExternalMemory /
# ImportExternalSemaphore. CUDA-only and opt-in — the default file handoff needs
# none of it, so it stays out of the base install.
interop = [
    "cuda-python>=12.0",
]
# Apple MLX training-compute backend (--neural-trainer mlx, change
# mlx-neural-trainer): GPU-accelerated online training on the same Metal device
# the renderer uses, no CUDA. Apple-Silicon-only wheel and opt-in — every other
# trainer (numpy oracle, torch CUDA) needs none of it, and nothing imports mlx
# unconditionally, so it stays out of the base install.
mlx = [
    "mlx>=0.30",
]

[project.scripts]
skinny = "skinny.app:main"
skinny-gui = "skinny.ui.qt.app:main"
skinny-web = "skinny.web_app:main"
skinny-render = "skinny.headless:main"
skinny-import-pbrt = "skinny.pbrt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skinny = [
    "shaders/*.slang",
    "shaders/estimators/*.slang",
    "shaders/samplers/*.slang",
    "shaders/lights/*.slang",
    "shaders/integrators/*.slang",
    "mtlx/*.mtlx",
    "mtlx/genslang/*.mtlx",
    "mtlx/genslang/*.slang",
    "web_templates/*.html",
    "web_templates/*.js",
    "pbrt/data/*.npz",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires Vulkan GPU + slangpy",
    "slow: Monte Carlo / many-sample statistical tests",
    "slangpile: exercises slangpile transpiler",
]

[tool.ruff]
line-length = 100
# The repo root carries a venv-generated `.gitignore` containing `*`, which
# ruff otherwise honours — silently excluding the entire tree so `ruff check
# src/` finds zero files and passes vacuously. Opt out of gitignore-based
# discovery; the canonical command scopes itself to `src/` explicitly and
# ruff's built-in excludes still skip caches / build / venv dirs.
respect-gitignore = false

[tool.ruff.lint]
# Deliberately-aligned multi-statement lines are a house style throughout the
# codebase: grouped matrix/vector row assignments and short single-line guard
# clauses (`if cond: do()`). These are formatting choices, not lint debt, so we
# don't flag colon/semicolon compound statements.
ignore = ["E701", "E702"]

[tool.ruff.lint.per-file-ignores]
# usd_loader defines a module logger ahead of its heavy pxr/skinny imports
# (E402, intentional ordering) and annotates a few returns with lazily-imported
# types as forward-ref strings (F821) to avoid import cycles.
"src/skinny/usd_loader.py" = ["E402", "F821"]
